# deepresearch

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODOS.md  config.example.yaml  pyproject.toml
.claude/agents/: sibyl-contrarian.yml  sibyl-critic.yml  sibyl-editor.yml  sibyl-empiricist.yml  sibyl-experiment-supervisor.yml  sibyl-experimenter.yml  sibyl-final-critic.yml  sibyl-idea-validation-decision.yml  sibyl-innovator.yml  sibyl-interdisciplinary.yml  sibyl-latex-writer.yml  sibyl-literature.yml  sibyl-novelty-checker.yml  sibyl-optimist.yml  sibyl-outline-writer.yml  sibyl-planner.yml  sibyl-pragmatist.yml  sibyl-rebuttal-checker.yml  sibyl-rebuttal-strategist.yml  sibyl-rebuttal-synthesizer.yml  sibyl-rebuttal-writer.yml  sibyl-reflection.yml  sibyl-result-synthesizer.yml  sibyl-section-critic.yml  sibyl-section-writer.yml  sibyl-self-healer.yml  sibyl-sequential-writer.yml  sibyl-simulated-reviewer.yml  sibyl-skeptic.yml  sibyl-strategist.yml  sibyl-supervisor-decision.yml  sibyl-supervisor.yml  sibyl-synthesizer.yml  sibyl-theoretical.yml
.claude/commands/: continue.md  debug.md  evolve.md  init.md  pivot.md  resume.md  start.md  status.md  stop.md
.claude/skills/: sibyl-contrarian.md  sibyl-critic.md  sibyl-editor.md  sibyl-empiricist.md  sibyl-experiment-supervisor.md  sibyl-experimenter.md  sibyl-final-critic.md  sibyl-idea-validation-decision.md  sibyl-innovator.md  sibyl-interdisciplinary.md  sibyl-latex-writer.md  sibyl-literature.md  sibyl-novelty-checker.md  sibyl-optimist.md  sibyl-outline-writer.md  sibyl-planner.md  sibyl-pragmatist.md  sibyl-rebuttal-checker.md  sibyl-rebuttal-strategist.md  sibyl-rebuttal-synthesizer.md  sibyl-rebuttal-writer.md  sibyl-reflection.md  sibyl-result-synthesizer.md  sibyl-section-critic.md  sibyl-section-writer.md  sibyl-self-healer.md  sibyl-sequential-writer.md  sibyl-simulated-reviewer.md  sibyl-skeptic.md  sibyl-strategist.md  sibyl-supervisor-decision.md  sibyl-supervisor.md  sibyl-synthesizer.md  sibyl-theoretical.md
configs/: api_providers.yaml  config.yaml  datasets.yaml
docs/: ZZYANG-代码库导览.md  comparison_evoscientist.md  local-smoke-test-tutorial.md
docs/plans/: 2026-04-04-sibyl-redesign.md  2026-04-06-dashboard-frontend-design.md  2026-04-09-autonomy-level-design.md  2026-04-09-content-aware-writing-pipeline.md
experiments/mnist_cnn/: train.py
memory-sync/: SKILL.md
memory-sync/scripts/: memory_sync.py
scripts/: demo_experiment.py  train_peft_baseline.py  train_routed_peft.py
sibyl/: __init__.py  _paths.py  auto_fix.py  cli.py  config.py  demo.py  error_collector.py  event_logger.py  evolution.py  experiment_digest.py  experiment_records.py  experiment_recovery.py  gpu_scheduler.py  lark_markdown_converter.py  lark_sync.py  latex_pipeline.py  orchestra_skills.py  orchestrate.py  reflection.py  runtime_assets.py  self_heal.py  workspace.py
sibyl/compute/: __init__.py  base.py  runpod_backend.py
sibyl/dashboard/: server.py
sibyl/orchestration/: action_dispatcher.py  checkpointing.py  cli_core.py  common_utils.py  config_helpers.py  (+18 more)
tao/: cli.py  config.py  demo.py  experiment_launcher.py  experiment_tasks.py  latex_linter.py  llm_experiment.py  orchestrate.py
tests/: __init__.py  conftest.py  test_action_builders.py  test_analysis.py  test_compute_backend.py  test_config.py  test_core.py  test_evolution.py  test_experiment.py  test_experiment_tasks.py  test_infrastructure.py  test_lifecycle.py  test_memory_sync_skill.py  test_models.py  test_orchestrate.py  test_providers.py  test_rebuttal.py  test_self_heal.py  test_state_machine.py  test_webui.py  test_workspace.py
(+104 files in other folders)
