[project]
name = "deepresearch"
version = "1.0.0"
description = "Tao Research System — Autonomous AI Scientist (RunPod Native)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "flask>=3.0",
    "gunicorn>=22.0",
    "flask-sock>=0.7",
    "watchfiles>=0.21",
    "runpod>=1.7.0",
    "paramiko>=3.4.0",
]

[project.optional-dependencies]
lark = ["lark-oapi>=1.0.0", "mistune>=3.0"]
experiment = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "peft>=0.13.0",
    "sentencepiece>=0.2.0",
    "transformers>=4.45.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
tao = "tao.cli:main"
deepresearch = "tao.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tao"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["workspaces", ".git", ".venv"]
